# nwsl-notes

./: .gitignore  IMPROVEMENTS.md  Makefile  PRINCIPLES.md  README.md  pyproject.toml  requirements-substack.txt
.claude/prompts/: substack-writer.md
.github/workflows/: substack.yml  test.yml
archive/: ARCHITECTURE_DIAGRAMS.md  bloomberg-terminal-interface-observations.md  coding-agent-prompt.md  current-state-assessment.md  dark-header-light-body-summary.md  dark-theme-implementation-summary.md  dashboard-vision.md  data-lab-report-vision.md  implementation-prompt-backup.md  notebook-agents-setup.md  tab-taxonomy-framework.md  three-tab-structure.md
docs/: 2025-10-30-linguistic-exposure-layer.md  WORKFLOW.md  docs.md
scripts/: export_notebook.py  generate_article_images.py
templates/: model_card.md.j2
templates/posts/: example-post.md
tests/: __init__.py  conftest.py
tests/scripts/: test_export_notebook.py
tests/tools/substack/: __init__.py  test_publish.py
tools/substack/: cli.py  logger.py  publish_to_substack.py
